refactor(stats): make adding a stat one enum constant
The stat list was written out in four places: named fields on PlayerStatsData,
the same four in its codec, four positional ints on the sync payload, and two
exhaustive switches in PlayerStatsAPI plus one in the character sheet. Adding a
number to a player was a wire-format change.

Stats now live in a Map<PlayerStat,Integer> and everything reads off
PlayerStat.values(). The payload carries length-prefixed (id, value) pairs
instead of a fixed order, so the wire no longer encodes how many stats exist.

power()/precision()/withPower()/... survive as methods over the map. They read
better than get(PlayerStat.POWER) at the ~34 call sites, and keeping them is why
this touched four files instead of a dozen.

The transport-only knowledge field is folded into the map too. It was special
cased purely because it is derived; the codec now skips derived stats on write
and the server re-derives as before. That is what makes "add a stat" one
constant whether it is trainable, derived or neither.

Old saves keep loading: the codec reads the map, falling back to the four flat
fields, map wins. The flat fields are still written alongside - four ints, and a
world touched by this build still loads on the build before it, which matters
while people run alpha against saves they care about.

Verified rather than asserted: a sixth stat was added temporarily, the tree
compiled and all 648 tests passed, then it was reverted. That experiment is what
found the three switches - the compiler only caught them because they happened
to be exhaustive, and a non-exhaustive one would have shipped wrong numbers.

Still coupled by name: PlayerStatsAPI.getStat special-cases KNOWLEDGE to call
computeKnowledge. Left alone - one bespoke derivation does not earn a dispatch
table, and a second derived stat is the right moment to build one.